--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<h2>Iniciar sesion</h2>
+<h2>Login de usuario</h2>
 <form [formGroup]="formLogin" (ngSubmit)="onSubmit()">
     <div class="mb-3">
         <label class="form-label">Email</label>
@@ -10,3 +10,4 @@
     </div>
     <input type="submit" value="Enviar">
 </form>
+<button class="btn btn-info" (click)="onClick()">Login With Google</button>
